engine/test/electron/scripts/lexer/errors/unterminated_multiline.e
// ERROR TEST: Unterminated multiline string
"""multiline
   without
   closing
